# geoews

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  theory.rst
docs/api/: classical.rst  core.rst  indicators.rst  windows.rst
examples/: 01_ngrip_paleoclimate.ipynb  02_peter_lake_ecology.ipynb  03_physionet_sepsis.ipynb  test_real_data.py
geoews/: __init__.py  _version.py  alerts.py  benchmarks.py  classical.py  core.py  data.py  datasets.py  indicators.py  manifold.py  plot.py  windows.py
tests/: test_datasets_and_utils.py  test_manifold.py
