[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoews"
version = "0.1.1"
description = "Information-geometric early warning signals: KL rate, Fisher–Rao geometry, geodesic acceleration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alexander Sokol" }
]
keywords = ["early warning signals", "information geometry", "fisher-rao", "kl divergence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/vonixxxxx/geoews"
Repository = "https://github.com/vonixxxxx/geoews"
Issues = "https://github.com/vonixxxxx/geoews/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine", "jupyter"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["geoews*"]
