[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoews"
dynamic = ["version"]
description = "Information-geometric early warning signals: KL rate, Fisher–Rao geometry, geodesic acceleration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alexander Sokol" }
]
keywords = ["early warning signals", "information geometry", "fisher-rao", "kl divergence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/vonixxxxx/geoews"
Repository = "https://github.com/vonixxxxx/geoews"
Issues = "https://github.com/vonixxxxx/geoews/issues"
Documentation = "https://geoews.readthedocs.io/"
Changelog = "https://github.com/vonixxxxx/geoews/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine", "jupyter", "ruff", "mypy"]
docs = ["sphinx", "sphinx-rtd-theme", "numpydoc", "myst-parser", "sphinx-copybutton"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["geoews*"]

[tool.setuptools.dynamic]
version = {attr = "geoews._version.__version__"}

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "NPY"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501", "I001"]
"docs/conf.py" = ["D100"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "scipy.*", "statsmodels.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=geoews --cov-report=term-missing"
